fixing bug #40708 - The bug is actually about adding a new parameter to                     the self-extracting .exe code so it simply uncompresses                     its contents without running setup.exe at the end. There are two fixes to fhe extra.c file. 1) When running in silent/auto mode, if there's not enough disk space, the installer will go into an infinite loop.  This was discovered by fixing bug #40708.  The fix is to simply exit the installer (one line fix). 2) #40715 - Installer could unintentionally delete the selected installation             dir.  I've talked to Dan and Samir about this one line fix, and             they both agreed that it should happen.

a=leaf,dvedtiz
r=sgehani